--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Basalt/vendor/glm"]
 	path = Basalt/vendor/glm
 	url = https://github.com/g-truc/glm
+[submodule "Basalt/vendor/imgui"]
+	path = Basalt/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
